# mpd_particle_finder

./: CMakeLists.txt  out.root
batch/: batch_run.sh  run.sh  run_slurm.sh  run_slurm_k.sh
batch/uni/: run_slurm.sh  run_slurm1.sh
macro/: field_lambda.cc  get_pics.C  k_short.cc  lambda.cc  lambda_kshort.cc  lambda_lower_edge.cc  lambda_qa.cc  lambda_upper_edge.cc  rec30_lambda_kshort.cc  rec30_pid_lambda_kshort.cc  rec_k_short_qa.cc  rec_k_short_sim_qa.cc  rec_lambda_qa.cc  rec_lambda_sim_qa.cc  test.cc  test_lambda.cc  tru_lambda_qa.cc
macro/uni/: lambda_kshort.cc  lambda_kshort_rec40.cc  rec_lambda_sim_qa.cc  rec_lambda_sim_qa_rec40.cc  rec_lambda_sim_qa_rec40_lesson.cc  rec_lambda_sim_qa_whitening.cc  tru_lambda_qa.cc
src/: FinderLinkDef.h  find_particles.cc  find_particles.h  finder.cc  finder.h  getters.h  main.cc  tree_manager.cc  tree_manager.h  utils.cc  utils.h
